# Autotests

./: .gitignore  .pylintrc  Dockerfile  README.md  pytest.ini  tox.ini
Autotests/: .gitlab-ci.yml  pyproject.toml
Autotests/api/cabinet/: cabinet_api_client.py
Autotests/api/meet_processor/: meet_processor_actions.py
Autotests/decorators/: waits.py
Autotests/fixtures/: extension_api_fixtures.py  platform_ui_fixtures.py  playwrite_fixtures.py  reporting_fixtures.py
Autotests/helpers/: allure_helper.py  check_helper.py  date_helper.py  test_data_helper.py
Autotests/resources/api/meet_processor/: patch_process_update.json
Autotests/resources/api/platform/: post_brief_form.json
Autotests/tests/api/platform/: test_create_upload_token.py  test_delete_project.py
Autotests/tests/api/platform/roles/: test_create_project_roles.py
Autotests/tests/ui/meet_extension/: conftest.py
Autotests/tests/ui/platform/: test_platform_login.py
Autotests/ui/locators/: google_login_page_locators.py  google_meet_base_page_locators.py
Autotests/ui/pages/: base_page.py  google_meet_base_page.py
Autotests/ui/pages/platform/: platform_login_page.py
api/: base_api.py  base_api_client.py
api/devices/: device_api_actions.py  devices_api.py
configs/: config.py  project_paths.py
fixtures/: allure_fixtures.py  extension_ui_fixtures.py  platform_api_fixtures.py  platform_ui_fixtures.py  playwrite_fixtures.py  reporting_fixtures.py
helpers/: anty_capcha.py  compare_csv.py  dict_helper.py  filename_helpers.py  images_compare.py
log/: __init__.py
tests/: conftest.py
(+84 files in other folders)
